<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- android_small___1 strings -->

    <string name="ek_img_content">ExportKit Image</string>
    <string name="sign_up_string">Đăng kí</string>
    <string name="or_ek1_string">HOẶC</string>
    <string name="forgot_password_underlined_string"><u>Quên mật khẩu</u></string>
    <string name="forgot_password_string">Quên mật khẩu</string>
    <string name="save_password_string">Lưu mật khẩu</string>
    <string name="log_in_string">Đăng nhập</string>
    <string name="username_string">Tên đăng nhập</string>
    <string name="password_string">Mật khẩu</string>
    <string name="new_password_string">Mật khẩu mới</string>
    <string name="recommend_recipe_string">Đề xuất hôm nay</string>

    <string name="app_name">Let\'s Cook Together</string>
    <string name="empty" />
    <string name="title_home">Nhà</string>
    <string name="title_search">Tìm kiếm</string>
    <string name="title_share">Chia sẻ</string>
    <string name="title_noti">Thông báo</string>
    <string name="title_user">Hồ sơ</string>
    <string name="title_sign_up">Đăng ký</string>
    <string name="title_login">Đăng nhập</string>
    <string name="title_bookmark">Đã lưu</string>
    <string name="title_article">Bài đăng</string>

    <!-- user strings -->

    <string name="_61_8k_string">61.8K</string>
    <string name="bookmarks_string">Lượt thích bài</string>
    <string name="_10_5m_string">10.5M</string>
    <string name="followers_string">Người theo dõi</string>
    <string name="_100k_string">100K</string>
    <string name="recipes_string">Công thức</string>
    <string name="follow_string">Theo dõi</string>
    <string name="gordon_ramsay_string">Gordon Ramsay</string>
    <string name="pizza_string">Pizza </string>
    <string name="gordon_ramsay_ek1_string">Gordon Ramsay</string>
    <string name="asian_food_string">Asian food</string>
    <string name="learn_now_string">Learn now</string>

    <!-- sign_up strings -->

    <string name="re_enter_password_string">Nhập lại mật khẩu</string>
    <string name="already_have_account__string">Đã có tài khoản?</string>
    <string name="most_follow">Nhiều follow nhất</string>
    <string name="most_react">Nhiều lượt thích nhất</string>
    <string name="most_recent">Gần đây nhất</string>
    <string name="default_sort">Ngẫu nhiên</string>

    <!-- create_post_1 strings -->

    <string name="next_steps_string">Tiếp tục</string>
    <string name="create_your_posts_string">Tạo bài viết</string>
    <string name="flex_ek1_string">Linh hoạt</string>
    <string name="dinner_ek1_string">Bữa tối</string>
    <string name="lunch_ek1_string">Bữa trưa</string>
    <string name="breakfast_ek1_string">Bữa sáng</string>

    <!-- create_post_2 strings -->

    <string name="desserts_ek1_string">Tráng miệng</string>
    <string name="main_dishes_ek1_string">Món chính</string>
    <string name="appetizer_ek1_string">Khai vị</string>

    <!-- create_post_3 strings -->

    <string name="done_string">Xem trước</string>
    <string name="type_string">Loại món ăn</string>
    <string name="dish_name_string">Tên món ăn</string>
    <string name="image_string">Ảnh món ăn</string>
    <string name="ingredients_string">Nguyên liệu</string>
    <string name="ingredients_hint">Nguyên liệu</string>
    <string name="recipe_string">Công thức</string>
    <string name="recipe_hint">Bước 1: …</string>
    <string name="time_to_make_string">Thời gian làm ước tính</string>

    <!-- create_post_4 strings -->
    <string name="upload_string">Đăng bài</string>

    <!-- article strings -->
    <string name="notification_string">Thông báo</string>
    <string name="ingredients">Nguyên liệu</string>
    <string name="recipe">Chế biến</string>
    <string name="comment">Bình luận</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="update_profile">Cập nhật trang cá nhân</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="logout">Đăng xuất</string>
    <string name="email">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>