<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.test.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.test.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_share"
        android:name="com.example.test.ui.share.ShareFragment"
        android:label="@string/title_share"
        tools:layout="@layout/fragment_share" >
    </fragment>

    <fragment
        android:id="@+id/navigation_bookmarks"
        android:name="com.example.test.ui.bookmarks.BookmarksFragment"
        android:label="@string/title_bookmark"
        tools:layout="@layout/fragment_bookmarks" />

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.test.ui.user.LoginFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/navigation_sign_up"
        android:name="com.example.test.ui.user.SignUpFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_sign_up" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.example.test.ui.user.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_user" />

    <fragment
        android:id="@+id/navigation_article"
        android:name="com.example.test.ui.ArticleFragment"
        android:label="@string/title_article"
        tools:layout="@layout/fragment_article" />
</navigation>