<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical"
	tools:context=".activities.MainActivity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_marginHorizontal="15dp"
		android:layout_marginTop="5dp">

		<ImageView android:id="@+id/back_button"
			android:src="@drawable/vector_ek1"
			android:layout_width="40dp"
			android:layout_height="40dp"
			android:padding="10dp" />

		<TextView android:id="@+id/next_steps_btn"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:textSize="20sp"
			android:textColor="@color/colorAccent"
			android:layout_weight="1"
			android:layout_gravity="bottom"
			android:gravity="end"
			android:text="@string/done_string" />

	</LinearLayout>

	<androidx.core.widget.NestedScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:layout_constraintTop_toBottomOf="@id/back_button"
		app:layout_constraintLeft_toLeftOf="parent">

		<LinearLayout
			android:id="@+id/scroll_wrap_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:paddingHorizontal="30dp"
			>

			<TextView android:id="@+id/type_string"
				android:textStyle="bold"
				android:textSize="25sp"
				android:textColor="@color/next_steps_color"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="15dp"
				android:text="@string/type_string" />


			<Spinner
				android:id="@+id/spinner"
				android:layout_width="match_parent"
				android:layout_height="40dp"
				android:layout_marginTop="10dp"
				android:background="@drawable/bg_spinner"
				android:spinnerMode="dropdown"/>

			<TextView android:id="@+id/dish_name_string"
				android:textStyle="bold"
				android:textSize="25sp"
				android:textColor="@color/mainTheme"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:text="@string/dish_name_string"

				/>

			<EditText
				android:id="@+id/dish_name_input"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="15sp"
				android:layout_marginTop="-10dp"
				android:maxLines="1" />

			<TextView android:id="@+id/image_string"
				android:textStyle="bold"
				android:textSize="25sp"
				android:textColor="@color/next_steps_color"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:text="@string/image_string"

				/>

			<ImageView
				android:id="@+id/img_input"
				android:layout_width="30dp"
				android:layout_height="30dp"
				android:layout_gravity="center"
				android:scaleType="centerCrop"
				android:background="@drawable/baseline_image_24"/>

			<TextView android:id="@+id/time_to_make_string"
				android:textStyle="bold"
				android:textSize="25sp"
				android:textColor="@color/next_steps_color"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:text="@string/time_to_make_string"
				/>

			<EditText
				android:id="@+id/time_to_make_input"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="15sp"
				android:layout_marginTop="-10dp"
				android:maxLines="1" />

			<TextView android:id="@+id/ingredients_string"
				android:textStyle="bold"
				android:textSize="25sp"
				android:textColor="@color/next_steps_color"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:text="@string/ingredients_string"
				/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_marginTop="-10dp">
				<EditText
					android:id="@+id/ingredients_input"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:maxLines="1"
					android:textSize="15sp"
					android:layout_weight="10"/>

				<Button
					android:id="@+id/add_btn"
					android:layout_width="30dp"
					android:layout_height="30dp"
					android:layout_marginLeft="5dp"
					android:background="@drawable/add" />

			</LinearLayout>

			<com.example.test.utils.ExpandedListView
				android:id="@+id/ingredients_list"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:scrollbars="none"
				android:padding="0px"
				/>

			<TextView android:id="@+id/recipe_string"
				android:textStyle="bold"
				android:textSize="25sp"
				android:textColor="@color/next_steps_color"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:text="@string/recipe_string"
				/>

			<EditText
				android:id="@+id/recipe_input"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/recipe_hint"
				android:textSize="15sp"
				android:layout_marginTop="-10dp"
				android:inputType="textMultiLine" />
		</LinearLayout>
	</androidx.core.widget.NestedScrollView>

</LinearLayout>