<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <ImageView
        android:id="@+id/user_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:src="@drawable/__img___edit_logout"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingHorizontal="20dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <View   android:id="@+id/ellipse_1"
                android:background="@drawable/ellipse_1_shape"
                android:layout_width="83dp"
                android:layout_height="83dp" />

            <ImageView
                android:id="@+id/vector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/human" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp">

            <TextView android:id="@+id/user_username"
                android:textSize="26sp"
                android:textColor="@color/_61_8k_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gordon_ramsay_string"
                android:layout_marginTop="-5dp"
                />

            <EditText
                android:id="@+id/user_fullname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="user full name"
                android:textSize="15sp"
                android:background="@drawable/no_underline_edittext"
                android:layout_marginTop="20dp"
                android:cursorVisible="false"
                android:focusable="false"/>

            <RelativeLayout
                android:id="@+id/follow_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="58dp">

                <View   android:id="@+id/follow_frame"
                    android:background="@drawable/follow_frame"
                    android:layout_width="120dp"
                    android:layout_height="24dp" />

                <TextView
                    android:id="@+id/follow_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/follow_string"
                    android:textColor="@color/follow_color"
                    android:textSize="14sp" />
            </RelativeLayout>
        </RelativeLayout>



        <TextView
            android:id="@+id/user_bio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center_vertical"
            android:text="@string/hi__i_like_to_think_of_my_cooking_as_expressions_of_love_for_my_family_and_friends__especially_when_it_s_european_dishes_or_asian_dishes__string"
            android:textColor="@color/bookmarks_color"
            android:textSize="15sp" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView android:id="@+id/_post_count"
                android:textSize="22sp"
                android:textColor="@color/_61_8k_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_61_8k_string"
                android:layout_weight="1"
                android:gravity="center"
                />

            <TextView android:id="@+id/_follower_count"
                android:textSize="22sp"
                android:textColor="@color/_61_8k_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10_5m_string"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingLeft="-30dp"
                />

            <TextView
                android:id="@+id/_bookmark_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_100k_string"
                android:textColor="@color/_61_8k_color"
                android:textSize="22sp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingLeft="-25dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView android:id="@+id/recipes"
                android:textSize="17sp"
                android:textColor="@color/bookmarks_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipes_string"
                android:layout_weight="3"
                android:gravity="center"
                android:paddingLeft="15dp"
                />

            <TextView android:id="@+id/followers"
                android:textSize="17sp"
                android:textColor="@color/bookmarks_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/followers_string"
                android:layout_weight="3"
                android:gravity="center"
                android:paddingStart="10dp"
                />

            <TextView
                android:id="@+id/bookmarks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bookmarks_string"
                android:textColor="@color/bookmarks_color"
                android:textSize="17sp"
                android:layout_weight="3"
                android:gravity="center"
                />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <ImageView
            android:src="@drawable/__img___icon_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            />


        <ImageView
            android:src="@drawable/icon_bookmarks"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <ImageView
            android:src="@drawable/__img___grid_select"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_centerInParent="true"
            />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/status_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <RelativeLayout
            android:id="@+id/title_1"
            android:layout_width="match_parent"
            android:layout_height="130dp">

            <View
                android:id="@+id/bg_status"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_status_shape" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="180dp"
                >

                <ImageView
                    android:id="@+id/image_food_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/image_food_1" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp">

                <TextView
                    android:id="@+id/asian_food"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/asian_food_string"
                    android:textColor="@color/_bg__user_ek2_color"
                    android:textSize="12sp"/>
                <TextView
                    android:id="@+id/pizza"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/pizza_string"
                    android:textColor="@color/pizza_color"
                    android:textSize="30sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="33dp"
                android:layout_marginTop="70dp">

                <View
                    android:layout_width="65dp"
                    android:layout_height="17dp"
                    android:background="@drawable/khung_learn_now_shape" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/learn_now_string"
                    android:textColor="#F8E430"
                    android:textSize="8sp"
                    />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="110dp"
                android:text="@string/gordon_ramsay_ek1_string"
                android:textColor="@color/_bg__user_ek2_color"
                android:textSize="13sp" />


        </RelativeLayout>

    </LinearLayout>

</LinearLayout>