<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:id="@+id/step_1">


	<TextView android:id="@+id/create_your_posts"
		android:textStyle="bold"
		android:textSize="34sp"
		android:textColor="@color/next_steps_color"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="55dp"
		android:layout_marginLeft="40dp"
		android:text="@string/create_your_posts_string"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		/>

	<FrameLayout
		android:id="@+id/appetizer_frame"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="40dp"
		android:layout_marginTop="25dp"
		app:layout_constraintTop_toBottomOf="@id/create_your_posts"
		app:layout_constraintLeft_toLeftOf="@id/create_your_posts">

		<View
			android:id="@+id/background_breakfast"
			android:layout_width="wrap_content"
			android:layout_height="100dp"
			android:background="@drawable/make_corner"
			/>

		<TextView android:id="@+id/breakfast_ek1"
			android:layout_marginTop="12dp"
			android:layout_marginLeft="30dp"
			android:textSize="30sp"
			android:textColor="@color/next_steps_color"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/breakfast_ek1_string"
			/>

		<ImageView
			android:id="@+id/image_breakfast"
			android:layout_width="70dp"
			android:layout_height="70dp"
			android:layout_gravity="top|right"
			android:layout_marginRight="20dp"
			android:layout_marginTop="15dp"
			android:src="@drawable/image_breakfast" />

	</FrameLayout>


	<FrameLayout
		android:layout_marginTop="20dp"
		android:id="@+id/main_frame"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="40dp"
		app:layout_constraintTop_toBottomOf="@id/appetizer_frame"
		>

		<View
			android:id="@+id/background_lunch"
			android:layout_width="wrap_content"
			android:layout_height="100dp"
			android:layout_centerInParent="true"
			android:background="@drawable/make_corner" />

		<TextView
			android:id="@+id/lunch_ek1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="12dp"
			android:layout_marginLeft="30dp"
			android:text="@string/lunch_ek1_string"
			android:textColor="@color/next_steps_color"
			android:textSize="30sp" />

		<ImageView android:id="@+id/image_lunch"
			android:src="@drawable/image_lunch"
			android:layout_gravity="top|right"
			android:layout_marginRight="20dp"
			android:layout_marginTop="15dp"
			android:layout_width="70dp"
			android:layout_height="70dp" />

	</FrameLayout>

	<FrameLayout
		android:layout_marginTop="20dp"
		android:id="@+id/dessert_frame"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="40dp"
		app:layout_constraintTop_toBottomOf="@id/main_frame"
		>

		<View
			android:id="@+id/background_dinner"
			android:layout_width="wrap_content"
			android:layout_height="100dp"
			android:background="@drawable/make_corner" />

		<TextView
			android:id="@+id/dinner_ek1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="12dp"
			android:layout_marginLeft="30dp"
			android:text="@string/dinner_ek1_string"
			android:textColor="@color/next_steps_color"
			android:textSize="30sp" />

		<ImageView android:id="@+id/image_dinner"
			android:src="@drawable/image_dinner"
			android:layout_gravity="top|right"
			android:layout_marginRight="20dp"
			android:layout_marginTop="15dp"
			android:layout_width="70dp"
			android:layout_height="70dp" />

	</FrameLayout>

	<FrameLayout
		android:layout_marginTop="20dp"
		android:id="@+id/flex_frame"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="40dp"
		app:layout_constraintTop_toBottomOf="@id/dessert_frame"
		>

		<View
			android:id="@+id/background_flex"
			android:layout_width="wrap_content"
			android:layout_height="100dp"
			android:layout_centerInParent="true"
			android:background="@drawable/make_corner" />

		<TextView
			android:id="@+id/flex_ek1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:layout_marginLeft="30dp"
			android:text="@string/flex_ek1_string"
			android:textColor="@color/next_steps_color"
			android:textSize="30sp" />


		<ImageView android:id="@+id/image_flex"
			android:src="@drawable/image_flex"
			android:layout_gravity="top|right"
			android:layout_marginRight="20dp"
			android:layout_marginTop="15dp"
			android:layout_width="70dp"
			android:layout_height="70dp" />

	</FrameLayout>

	<FrameLayout android:id="@+id/next_steps_btn"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		android:layout_margin="20dp"
		>

		<ImageView android:id="@+id/khung_steps"
			android:src="@drawable/khung_steps"
			android:layout_width="197dp"
			android:layout_height="59dp" />

		<TextView android:id="@+id/next_steps"
			android:textSize="25sp"
			android:textColor="@color/next_steps_color"
			android:layout_marginLeft="30dp"
			android:layout_marginTop="12dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/next_steps_string"
			/>

		<ImageView android:id="@+id/vector"
			android:src="@drawable/vector"
			android:layout_marginStart="150dp"
			android:layout_marginTop="26dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />

	</FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>